[tool.poetry]
name = "homework"
version = "1"
description = "homework witn new environment"
authors = ["Andrey Rassokhin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selene = "2.0.0rc3post3"
pytest = "7.3.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
